section-newsletter height adjustments

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div id="content">
           <h3>Cadastre seu e-mail</br>e receba ofertas exclusivas</h3>
           <form action="" id="form">
-            <input type="text" name="" id="name" placeholder="Nome" aria-required="true" required>
-            <input type="email" name="" id="email" placeholder="E-mail" aria-required="true" required>
-            <input type="submit" value="Cadastrar">
+            <input type="text" name="name" id="name" placeholder="Nome" aria-required="true" required>
+            <input type="email" name="email" id="email" placeholder="E-mail" aria-required="true" required>
+            <input type="submit" value="Cadastrar" id="button">
           </form>
         </div>
         <div id="errorMsg" style="display: none;">
