CSS media query adjustments

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
         <div class="icons">
           <p>Nos siga nas redes sociais</p>
-          <a href="https://diegoalmda.github.io/HC-TECH-LandingPage/"><img src="assets/instagram_1.png" alt="Instagram" width="50px"></a>
-          <a href="https://diegoalmda.github.io/HC-TECH-LandingPage/"><img src="assets/facebook_3.png" alt="Facebook" width="50px"></a>
+          <a href="#"><img src="assets/instagram_1.png" alt="Instagram" width="50px"></a>
+          <a href="#"><img src="assets/facebook_3.png" alt="Facebook" width="50px"></a>
         </div>
       </div>
       <div class="promo" >
